--- a/dinosaurs.html
+++ b/dinosaurs.html
@@ -3,4 +3,4 @@ layout: default
 ---
 
 <h1>Dinosaurs</h1>
-<img src="{{site.baseurl}}/images/dinosaur.jpg alt="">
+<img src="{{site.baseurl}}/images/dinosaur.jpg" alt="">
